# linear-geometry

./: .gitignore  README.md  linear-geometry.cabal
src/Linear/Geometry/Euclidean/: V2.hs
