cabal-version:       2.4

name:                linear-geometry
version:             0.1.0.0
synopsis:            Geometry Functions using the Linear Ecosystem
description:         Geometry Functions using the Linear Ecosystem
homepage:            https://github.com/TravisWhitaker/linear-geometry
bug-reports:         https://github.com/TravisWhitaker/linear-geometry/issues
license:             MIT
license-file:        LICENSE
author:              Travis Whitaker
maintainer:          pi.boy.travis@gmail.com
copyright:           Travis Whitaker 2020
category:            Math
extra-source-files:  README.md

library
  exposed-modules:     Linear.Geometry.Euclidean.V2
  -- other-modules:
  -- other-extensions:
  build-depends:       base ^>=4.13.0.0
                     , deepseq ^>= 1.4
                     , linear ^>= 1.21
                     , vector ^>= 0.12
  hs-source-dirs:      src
  default-language:    Haskell2010

